--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br" ng-app="loja">
 <head>
-	<title>Loja</title>
-	<!--<meta charset="utf-8">-->
-	<!-- <meta name="viewport" content="width=device-width"> -->
-	<link rel="stylesheet" href="public/css/bootstrap.min.css">
-	<link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
-	<script src="public/js/lib/angular.min.js"></script>
-	<script src="public/js/app.js"></script>
-	<script src="public/js/controller/fotos-controller.js"></script>
+    <title>Loja</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="public/css/efeitos.css">
+    <script src="public/js/lib/angular.min.js"></script>
+    <script src="public/js/lib/angular-animate.min.js"></script>
+    <script src="public/js/lib/angular-route.min.js"></script>
+    <script src="public/js/app.js"></script>
+    <script src="public/js/controller/produtos-controller.js"></script>
+    <script src="public/js/directives/minhas-diretivas.js"></script>
 </head>
-<body ng-controller="FotosController">
-	<div class="container">
-		<h1 class="text-center">Loja</h1>
-		<img alt="{{banner.titulo}}" src="{{banner.url}}" class="img-responsive center-block" >
-	</div>
+<body>
+    <div class="container">
+        <ng-view></ng-view>        
+    </div>
 </body>
 </html>
